--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "apexcharts": "^3.36.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "framer-motion": "^7.10.2",
     "next": "13.0.7",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.4"
   }
 }
