--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "framer-motion": "^7.10.2",
-    "next": "13.0.7",
+    "next": "^12",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
