--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@chakra-ui/react": "^2.4.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@faker-js/faker": "^7.6.0",
+    "@hookform/resolvers": "^2.9.10",
     "@next/font": "13.0.7",
     "@rocketseat/eslint-config": "^1.1.3",
+    "@tanstack/react-query-devtools": "^4.20.9",
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -26,7 +29,17 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.2",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yup": "^0.32.11",
+    "zod": "^3.20.2"
+  },
+  "devDependencies": {
+    "@tanstack/react-query": "^4.20.9",
+    "@types/faker": "^6.6.9",
+    "faker": "^6.6.6",
+    "miragejs": "^0.1.46",
+    "react-query": "^3.39.2"
   }
 }
