--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@next/font": "13.0.7",
     "@rocketseat/eslint-config": "^1.1.3",
     "@tanstack/react-query-devtools": "^4.20.9",
+    "@types/axios": "^0.14.0",
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "apexcharts": "^3.36.3",
+    "axios": "^1.2.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "framer-motion": "^7.10.2",
