--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "13.0.7",
     "framer-motion": "^7.10.2",
     "next": "^12",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
